[tool.poetry]
name = "project_euler"
version = "0.1.0"
description = ""
authors = ["Mike Conigliaro <mike@conigliaro.org>"]

[tool.poetry.dependencies]
python = "^3.10"

pytest = "^7.1"
pytest-cov = "^3.0"

[tool.poetry.dev-dependencies]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov project_euler -ra --capture=no --durations=0"
